# symbol-aligner

./: .env.example  .gitignore  LICENSE  README.ja.md  README.md  README.zh.md  STORY.ja.md  STORY.md  STORY.zh.md  config.toml  pyproject.toml
mappings/: example.json
scripts/: gen_mapping.py
src/: __init__.py  ast_analyze.py  config.py  fuzz_match.py  llm.py  main.py  mapping.py  mcp_server.py  models.py  recall.py
tests/: test_accuracy.py  test_ast_analyze.py  test_config.py  test_fuzz_match.py  test_mapping.py  test_mcp_server.py  test_pipeline.py  test_recall.py  test_string_split.py
